# any-api-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONFIG_SCHEMA.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  demo_config.yaml  docker-compose.yml  jetbrains.gitignore  pyproject.toml
.github/workflows/: docker.yml  test.yml
any_api_mcp/: __init__.py  cli.py  loader.py  server.py
tests/: test_e2e.py  test_integration.py  test_loader.py
